# digimon-card-game

./: .gitignore  README.md  build.cljs.edn  deps.edn  figwheel.cljs.edn
api/: .gitignore  Dockerfile  README.md  build.clj  deps.edn  search.cljs.edn
api/resources/: search-syntax.bnf  taoensso.timbre.config.edn  tr.edn
card-scanner/: README.md  card-scanner.js  hash_db.json  index.html  sw.js
card-scanner/css/: style.css
card-scanner/js/: card-scanner.js  opencv_js.js
codec/: README.md
codec/clojure/: README.md  deps.edn
codec/elixir/: .gitignore  README.md  mix.exs
codec/gleam/: README.md  gleam.toml  manifest.toml
codec/go/: README.md  go.mod  main.go
codec/php/: README.md
codec/python/: .gitignore  README.md  pyproject.toml
codec/python/dcg_codec/: __init__.py  cli.py
codec/python/dcg_codec/codec/: __init__.py  decode.py  encode.py
codec/python/tests/: test_codec.py
codec/ruby/: README.md  dcg_codec.gemspec
codec/rust/: Cargo.toml  README.md
codec/rust/src/: codec.rs  main.rs
codec/rust/src/codec/: decode.rs  encode.rs
codec/rust/tests/: codec.rs
codec/typescript/: README.md  package-lock.json  package.json  tsconfig.json
db/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deps.edn
db/resources/: block-icons.edn  card-parser.bnf  card-repairs.edn  ko-products.edn  panorama.edn
db/src/: block_icon.rs  block_marker.rs  digivolution_requirements.rs  digivolve_conditions.rs  flann.rs  (+5 more)
docs/: index.html  style.css
scripts/: Dockerfile  build.sh  native-image.sh
simulator/: .gitignore  deps.edn
(+124 files in other folders)
