[project]
name = "dcg_codec"
description = "Digimon Card Game (2020) deck codec"
version = "0.5.0"
dependencies = []
readme = "README.md"
requires-python = ">=3.9"
authors = [
	{name = "Brendon Walsh", email = "brendonwalsh@niamu.com"}
]
maintainers = [
	{name = "Brendon Walsh", email = "brendonwalsh@niamu.com"}
]

[project.urls]
Homepage = "https://github.com/niamu/digimon-card-game/tree/master/codec/python"
Repository = "https://github.com/niamu/digimon-card-game"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dcg_codec"]
