[package]
name = "dcg-codec"
readme = "README.md"
description = "Digimon Card Game 2020 deck codec"
authors = ["Brendon Walsh <brendonwalsh@niamu.com>"]
repository = "https://github.com/niamu/digimon-card-game"
version = "0.5.0"
license = "EPL-2.0"
edition = "2018"

[dependencies]
base64 = "0.21.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
structopt = "0.3.26"

[profile.release]
lto = true
strip = "debuginfo"
